after 2nd editing

--- a/src/audiance_comm.html
+++ b/src/audiance_comm.html
@@ -52,10 +52,13 @@
                     </a>
                     <ul class="collapse list-unstyled" id="projects">
                         <li>
-                            <a href="projects.html">مشاريع الخدمات العدليه</a>
+                            <a href="projects.html">مشاريع ادارة خدمات المحاكم</a>
                         </li>
                         <li>
-                            <a href="currentProjects.html">مشاريع المحاكم</a>
+                            <a href="currentProjects.html">مشاريع ادارة الخدمات العدلية والتوثيقات</a>
+                        </li>
+                        <li>
+                            <a href="happyProjects.html">مشاريع ادارة إسعاد المتعاملين</a>
                         </li>
                     </ul>
                 </li>
@@ -65,6 +68,14 @@
                     <a href="arrange.html">
                         <img src="./assets/img/icons/Path_102.png" alt="">
                         <span>مكتب التنسيق الاداري</span>
+                    </a>
+                </li>
+
+                <!-- قسم رقابة رسوم وتأمينات القضايا -->
+                <li>
+                    <a href="control.html">
+                        <img src="./assets/img/icons/Path_102.png" alt="">
+                        <span>قسم رقابة رسوم وتأمينات القضايا</span>
                     </a>
                 </li>
 
@@ -132,14 +143,14 @@
                 <li class="active">
                     <a href="#peopleserv" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">
                         <img src="./assets/img/icons/Union_11.png" alt="">
-                        <span>ادارة خدمة المتعاملين</span>
+                        <span>ادارة إسعاد المتعاملين</span>
                     </a>
                     <ul class="collapse list-unstyled" id="peopleserv">
                         <li>
-                            <a href="servic_dev.html">وحدة تطوير الخدمات</a>
+                            <a href="servic_dev.html">قسم تطوير الخدمات</a>
                         </li>
                         <li>
-                            <a href="audiance_inq.html">قسم الإستعلامات وخدمات الجمهور</a>
+                            <a href="audiance_inq.html">قسم مراكز خدمة وإسعاد المتعاملين</a>
                         </li>
                         <li class="active">
                             <a href="audiance_comm.html">قسم مركز الإتصال وشكاوي المتعاملين</a>
