--- a/src/main_page.html
+++ b/src/main_page.html
@@ -142,14 +142,14 @@
                 <li>
                     <a href="#peopleserv" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">
                         <img src="./assets/img/icons/Union_11.png" alt="">
-                        <span>ادارة خدمة المتعاملين</span>
+                        <span>ادارة إسعاد المتعاملين</span>
                     </a>
                     <ul class="collapse list-unstyled" id="peopleserv">
                         <li>
-                            <a href="servic_dev.html">وحدة تطوير الخدمات</a>
+                            <a href="servic_dev.html">قسم تطوير الخدمات</a>
                         </li>
                         <li>
-                            <a href="audiance_inq.html">قسم الإستعلامات وخدمات الجمهور</a>
+                            <a href="audiance_inq.html">قسم مراكز خدمة وإسعاد المتعاملين</a>
                         </li>
                         <li>
                             <a href="audiance_comm.html">قسم مركز الإتصال وشكاوي المتعاملين</a>
