--- a/src/projects.html
+++ b/src/projects.html
@@ -138,14 +138,14 @@
                 <li>
                     <a href="#peopleserv" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">
                         <img src="./assets/img/icons/Union_11.png" alt="">
-                        <span>ادارة خدمة المتعاملين</span>
+                        <span>ادارة إسعاد المتعاملين</span>
                     </a>
                     <ul class="collapse list-unstyled" id="peopleserv">
                         <li>
-                            <a href="servic_dev.html">وحدة تطوير الخدمات</a>
+                            <a href="servic_dev.html">قسم تطوير الخدمات</a>
                         </li>
                         <li>
-                            <a href="audiance_inq.html">قسم الإستعلامات وخدمات الجمهور</a>
+                            <a href="audiance_inq.html">قسم مراكز خدمة وإسعاد المتعاملين</a>
                         </li>
                         <li>
                             <a href="audiance_comm.html">قسم مركز الإتصال وشكاوي المتعاملين</a>
@@ -210,38 +210,6 @@
                         </li>
                         <li>
                             <a href="special_notary.html">قسم الكاتب العدل الخاص</a>
-                        </li>
-                    </ul>
-                </li>
-
-                <!-- ادارة الطب الشرعي -->
-                <li>
-                    <a href="#medicin" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">
-                        <i class="fas fa-prescription-bottle" style="width:14px;"></i>
-                        <span>ادارة الطب الشرعي</span>
-                    </a>
-                    <ul class="collapse list-unstyled" id="medicin">
-                        <li>
-                            <a href="#medicin_sec" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">
-                                <span>قسم الطب الشرعي</span>
-                            </a>
-                            <ul class="collapse list-unstyled" id="medicin_sec">
-                                <li>
-                                    <a href="medical-abu.html">أبوظبي</a>
-                                </li>
-                                <li>
-                                    <a href="medical-eye.html">العين</a>
-                                </li>
-                                <li>
-                                    <a href="medical-zafra.html">الظفرة</a>
-                                </li>
-                            </ul>
-                        </li>
-                        <li>
-                            <a href="chemical.html">قسم المختبر الكيميائي</a>
-                        </li>
-                        <li>
-                            <a href="elec_medical.html">قسم المختبر الإلكتروني</a>
                         </li>
                     </ul>
                 </li>
