--- a/src/happyProjects.html
+++ b/src/happyProjects.html
@@ -71,6 +71,14 @@
                     </a>
                 </li>
 
+                <!-- قسم رقابة رسوم وتأمينات القضايا -->
+                <li>
+                    <a href="control.html">
+                        <img src="./assets/img/icons/Path_102.png" alt="">
+                        <span>قسم رقابة رسوم وتأمينات القضايا</span>
+                    </a>
+                </li>
+                
                 <!-- مركز رؤية المحضونين -->
                 <li>
                     <a href="look.html">
@@ -135,14 +143,14 @@
                 <li>
                     <a href="#peopleserv" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">
                         <img src="./assets/img/icons/Union_11.png" alt="">
-                        <span>ادارة خدمة المتعاملين</span>
+                        <span>ادارة إسعاد المتعاملين</span>
                     </a>
                     <ul class="collapse list-unstyled" id="peopleserv">
                         <li>
-                            <a href="servic_dev.html">وحدة تطوير الخدمات</a>
+                            <a href="servic_dev.html">قسم تطوير الخدمات</a>
                         </li>
                         <li>
-                            <a href="audiance_inq.html">قسم الإستعلامات وخدمات الجمهور</a>
+                            <a href="audiance_inq.html">قسم مراكز خدمة وإسعاد المتعاملين</a>
                         </li>
                         <li>
                             <a href="audiance_comm.html">قسم مركز الإتصال وشكاوي المتعاملين</a>
